# Hacksmiths-Odoo-VIT-hackathon

./: README.md
backend/: .gitignore  env  main.py  ocr_engine.py  pyproject.toml
frontend/hacksmiths-RMS/: index.html  package-lock.json  package.json
frontend/hacksmiths-RMS/src/: App.jsx  index.css
frontend/hacksmiths-RMS/src/Global Api/: globalApi.js
frontend/hacksmiths-RMS/src/pages/: Landing.css  Landing.tsx  Login.css  Login.tsx  Signup.css  Signup.tsx
frontend/hacksmiths-RMS/src/pages/admin/: ApprovalRules.css  ApprovalRulesModal.tsx  Dashboard.css  Dashboard.tsx  Users.css  Users.tsx
frontend/hacksmiths-RMS/src/pages/employee/: Dashboard.tsx
frontend/hacksmiths-RMS/src/pages/manager/: Dashboard.tsx
